# appraisal

./: Cargo.toml  Dockerfile  README.md
src/: config.rs  enrichment.rs  error.rs  http.rs  main.rs  service.rs  types.rs  websocket.rs
