[package]
name = "appraisal"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
rumqttc = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
futures = "0.3"
uuid = { version = "1.4", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
native-tls = "0.2"
axum = { version = "0.6" }
